# Hust-opensource-Xuejie

./: README.md
IA C语言程序设计/: 2016年C语言程序设计试卷-参考答案及评卷标准.docx  2016年C语言程序设计试卷.docx  2020秋C语言期末试卷.docx  C语言实验报告-U202315752-陈宇航(1).doc
IA 中国语文/: 2023秋中国语文期末考试题A卷.docx  2023秋中国语文期末考试题B卷.docx  阿求的语文复习.docx
IA 微积分（一）/: 启明学院2017级一元分析学期中试题2解答.doc
IA 综合英语(一)/: Further Listening Unit 1.docx  Further Listening Unit 2.docx  Further Listening Unit 3.docx  Further Listening Unit 4.docx  Further Listening Unit 5.docx  Listen to China.docx  阿求的综合英语.doc
IA 计算思维/: 2023记忆题目.docx
IB 军事理论/: 3_军理新版(1) (1).docx  readme.txt  军理资料(重点) (1).doc
IB 离散数学(一)/: 2016年离散数学一考试点评.docx
IIA C++程序设计/: 2015STESTA.doc  2015stesta答案.doc  2023年C++程序设计模拟试卷.docx  2023年C++程序设计模拟试卷答案.docx  C++ 最后整理.docx
IIA C++程序设计/c艹实验/HomeworkWithGTest4Student/HomeworkWithGTest4Student/: .gitignore  CMakeLists.txt
IIA C++程序设计/c艹实验/HomeworkWithGTest4Student/HomeworkWithGTest4Student/include/ch4_homework/: MyArray.h
IIA C++程序设计/c艹实验/HomeworkWithGTest4Student/HomeworkWithGTest4Student/src/ch4_homework/: MyArray.cpp
IIA C++程序设计/c艹实验/HomeworkWithGTest4Student/HomeworkWithGTest4Student/tests/: CMakeLists.txt  MyArrayTest.cpp
IIA C++程序设计/c艹实验/需要发给学生的实验准备材料1/ProjectTemplateWithGTest/src/: CMakeLists.txt
IIA C++程序设计/c艹实验/需要发给学生的实验准备材料1/ProjectTemplateWithGTest/tests/: CMakeLists.txt
IIA 习思想/: content_1736011209188(1).docx  content_1736011217498(1).docx  习概资料(2).docx
IIA 数字逻辑/: logism整理.docx  实验6-U201913821.circ  数字逻辑复习题.pptx
IIA 电路理论/: 电路自制复习.md
IIA 离散数学（二）/: 离散二习题整理.docx
IIA 算法设计与分析/: 算法题型考点.docx
IIA 马克思主义原理/: 2022-2023A.docx  2024-2025马原复习提纲打印版-losyi.docx  2024-2025马原期末复习提纲.pptx2024-2025马原期末复习提纲.pptx  第十二组  吴华辉 苏锦超 王奕强 陈宇航 吉默涵 计算机科学与技术本硕博2301.docx
IIB Java程序设计/: CSXJ1902+U201913821.doc  作业题汇总.docx  复习题汇总.docx
IIB Verilog程序设计/: Verilog语言笔记.docx
IIB 信号与线性系统/: 公式整理.md
IIB 毛泽东思想与中国特色社会主义思想概要/: 整理.md
IIB 汇编语言程序设计/: 2015试卷.docx
IIB 自然语言处理/: 1 自然语言处理_实验任务书-辜希武修订.docx  2《自然语言处理》实验报告格式示例（2025版）-辜希武修订.docx  实验报告报告要求及说明-辜希武.docx  课程报告模板.docx  课程报告要求及说明-辜希武.docx
IIB 软件工程/: 《软件工程》项目报告撰写内容及规范化参考样本.docx
IIIA 大数据分析/: README.md
IIIA 操作系统设计原理/: 2020-操作系统试题-A卷答案.doc
IIIA 硬件综合课设/: cpu24.circ
IIIA 计算机网络与通信/: Computer Networking Mindmap.mm  复习题(答案).pptx  计网总复习.md
IIIA 计算机视觉/: 结课报告.docx
IIIB 函数式编程/: 函数式编程报告.docx
IIIB 大数据算法综合实践/: README.md  三角形计数.vsd
IIIB 编译原理/: 编译原理复习提纲.pptx  编译原理知识点整理.md
IIIB 计算机系统结构/: cache缓存64_64.xlsx  作业习题参考答案.pptx  系统结构知识点整理.md  计算机系统结构实验报告模板.docx
IVA 大数据系统综合实践/: Readme.md
MCM_ICM2022_C_Finalist/: LSTM.ipynb  LinearRegression.ipynb  buy.ipynb  dataProcess1.ipynb  plot.ipynb
华为昇腾企业课/: README.md
特——MCM_ICM2022_C_Finalist（美赛F奖代码论文）/: dataProcess.ipynb
特——华为基于鲲鹏的即时交流平台开发及调优/: 实验资源下载路径.xlsx
特——启明入学考试/: 启明考试样卷.docx  开学考试.docx  附件1.2023级各类实验班学生拟录取名单（20230910）.docx
特——计算机学院参考文件/: 2024年计算机学院专业分流方案.docx
特——转专业联考/: 19-23转专业考试报录比（备份版）.docx  2019-2024转专业考试报录比（备份版）.docx  2021转专业指南补充.docx  关于你能不能转专业的问题.docx  华中科技大学本科生跨院（系）选课申请表.docx  (+16 more)
(+1084 files in other folders)
